# Voice-Assistant

./: .gitignore  audio_recorder.py  main.py  pyproject.toml  question_answerer.py  stt.py  tts.py
